# freertos-apps

./: .gitmodules  README.md
apps/ble-terminal/: CMakeLists.txt
apps/ble-terminal/include/: ble_connection.h  ble_serial_service.h  io_stream.h
apps/ble-terminal/include/config/: FreeRTOSConfig.h  iot_config.h
apps/ble-terminal/scripts/: ble_cli.py
apps/ble-terminal/source/: ble_connection.c  ble_serial_service.c  main.c
apps/wifi-provisioning/softap-wifi-provisioning.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
apps/wifi-provisioning/softap-wifi-provisioning.X/nbproject/private/: configurations.xml  private.xml
apps/wifi-provisioning/src/: main.c
